--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "author": "Bran Sorem",
   "name": "OpenROV ROVision",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "repository": {
     "type": "git",
     "url": "git://github.com/OpenROV/openrov-software.git"
   },
   "dependencies": {
     "express": ">= 3.0.0",
-    "serialport": "",
+    "serialport": ">= 1.0.8",
     "socket.io": ""
   },
   "devDependencies": {},
   "engines": {
-    "node": ">= 0.6.12"
+    "node": ">= 0.8.11"
   }
 }
