Added nconf and linked configuration from both the Arduino and the nconf file to be viewable in the cockpit. Added sliders that are databound to the settings data via knockout. Still read-only at this point.  Added events to signal when setting data is being passed.

--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "express": ">= 3.0.0rc5",
     "serialport": ">= 1.0.8",
-    "socket.io": ""
+    "socket.io": "",
+    "nconf" : ""
   },
  "bundleDependencies": [
     "express",
     "socket.io",
-     "serialport"
+     "serialport",
+     "nconf"
   ],
   "engines": {
     "node": ">= 0.8.11"
