Fixed bad formatting in package.json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "nconf" : "",
     "request" : "",
     "moment" : "",
-    "mkdirp" : "",
+    "mkdirp" : ""
   },
  "bundleDependencies": [
     "express",
