--- a/package.json
+++ b/package.json
@@ -14,16 +14,13 @@
     "nconf" : "",
     "request" : "",
     "moment" : "",
-    "mkdirp" : ""
+    "mkdirp" : "",
+    "forever-monitor" : ""
   },
  "bundleDependencies": [
     "express",
     "socket.io",
-     "serialport",
-     "nconf",
-     "request",
-     "moment",
-     "mkdirp"
+    "serialport"
   ],
   "engines": {
     "node": ">= 0.8.11"
