ROV will report current IP via Google Talk.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "request" : "",
     "moment" : "",
     "mkdirp" : "",
-    "forever-monitor" : ""
+    "forever-monitor" : "",
+    "node-xmpp" : ""
   },
  "bundleDependencies": [
     "express",
