--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": ">= 3.0.0rc5",
     "serialport": ">= 1.0.8",
+    "ejs": "~0.8.3",
     "socket.io": "",
     "nconf" : "",
     "request" : "",
