--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "OpenROV-Cockpit",
-  "author": "OpenROV team (http://www.openrov.com): Bran Sorem, Simone Chiaretta, Dominik Fretz",
+  "author": "OpenROV team (http://www.openrov.com)",
   "description": "The UI and brain of the OpenROV Remotely Operated Vehicle",
   "version": "0.3.0",
   "repository": {
