Fixing mock function and adding command line arguments --port <port> and --mock to enable visual studio debuging

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "moment" : "",
     "mkdirp" : "",
     "forever-monitor" : "",
-    "node-xmpp" : ""
+	"optimist" : ""
   },
  "bundleDependencies": [
     "express",
