Revert "Fixing mock function and adding command line arguments --port <port> and --mock to enable visual studio debuging"
This reverts commit a05ef1fff41258a3f354b14d2348edcdfc6cf230.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "moment" : "",
     "mkdirp" : "",
     "forever-monitor" : "",
-	"optimist" : ""
+    "node-xmpp" : ""
   },
  "bundleDependencies": [
     "express",
