--- a/arduino/.travis.yml
+++ b/arduino/.travis.yml
@@ -1,7 +1,8 @@
 language: python
 before_script:
   - "curl -s http://arduino.googlecode.com/files/arduino-${ARDUINO_IDE_VERSION}-linux64.tgz | sudo tar xz -C /opt"
-  - "git clone -q https://github.com/errordeveloper/hwci-scripts ../hwci-scripts && ../hwci-scripts/bin/setup.sh"
+  - "git clone -q https://github.com/BrianAdams/hwci-scripts ../hwci-scripts && ../hwci-scripts/bin/setup.sh"
+  - "sudo apt-get install cppcheck"
 script:
   - "   env \
         USER_LIB_PATH=$PWD/../ \
@@ -15,5 +16,4 @@ script:
   - "test `grep -c fail results` -eq 0"
 
 env:
-  - ARDUINO_IDE_VERSION='1.0.2'
-  - ARDUINO_IDE_VERSION='1.0.3'
+  - ARDUINO_IDE_VERSION='1.0.5'
