Excluding from JSHint warnings commas in front of lines as this is a typical code style in defining require in node.js

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,5 +1,7 @@
-imports:
-    - javascript
-
+tools:
+    js_hint:
+        use_native_config: false
+        config:
+            laxcomma: true
 filter:
     excluded_paths: [src/static/bower_components/*,src/static/js/libs/*, dashboard/src/static/js/libs/*, dashboard/src/plugins/99_software/public/js/*.min.js]
