--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git://github.com/OpenROV/openrov-software.git"
   },
   "dependencies": {
-    "express": ">= 3.4.8",
+    "express": "= 3.4.8",
     "serialport": ">= 1.0.8",
     "ejs": "~0.8.3",
     "socket.io": "",
