More fixes for JSLint. Moved os-utils to a package

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	  "optimist" : "",
     "lazy" : ">= 1.0.11",
     "sync" : "",
+    "os-utils" : "",
     "jquery-file-upload-middleware" : ""
   },
   "bundleDependencies": [
