--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -4,4 +4,4 @@ tools:
         config:
             laxcomma: true
 filter:
-    excluded_paths: [src/static/bower_components/*,src/static/js/libs/*, dashboard/src/static/js/libs/*, dashboard/src/plugins/99_software/public/js/*.min.js, src/plugins/touchcontroller/public/js/gamecontroller.js]
+    excluded_paths: [src/static/bower_components/*,src/static/js/libs/*, dashboard/src/static/js/libs/*, dashboard/src/plugins/99_software/public/js/*.min.js, dashboard/src/plugins/99_software/public/js/jquery.ui.widget.js, dashboard/src/plugins/99_software/public/upload/js/vendor/jquery.ui.widget.js, src/plugins/touchcontroller/public/js/gamecontroller.js]
