--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express": "= 3.4.8",
     "serialport": ">= 1.0.8",
     "ejs": "~0.8.3",
-    "socket.io": "",
+    "socket.io": "~0.9.17",
     "nconf" : "",
     "request" : "",
     "moment" : "",
