Updating init.d scripts for debian

--- a/linux/dashboard.service
+++ b/linux/dashboard.service
@@ -39,7 +39,7 @@
 #      modified by : Peter Host (www.oghme.com)
 # ______________________________________________________________________________ 
 ### BEGIN INIT INFO
-# Provides:          node_debian_init
+# Provides:          openrov_dashboard
 # Required-Start:    $remote_fs $named $syslog
 # Required-Stop:     $remote_fs $named $syslog
 # Default-Start:     2 3 4 5
