--- a/src/static/package.json
+++ b/src/static/package.json
@@ -4,6 +4,6 @@
     "bower": "^1.3.3"
   },
   "scripts": {
-    "bower": "./node_modules/bower/bin/bower install"
+    "bower": "./node_modules/bower/bin/bower --allow-root install"
   }
 }
