Validating batteries on adding

--- a/src/static/bower.json
+++ b/src/static/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "static openrov",
   "dependencies": {
-    "fpsmeter": "~0.3.1"
+    "fpsmeter": "~0.3.1",
+    "knockout.validation": "~1.0.2"
   }
 }
