--- a/src/static/bower.json
+++ b/src/static/bower.json
@@ -1,7 +1,6 @@
 {
   "name": "static openrov",
   "dependencies": {
-    "fpsmeter": "~0.3.1",
-    "knockout.validation" : "~1.0.2"
+    "fpsmeter": "~0.3.1"
   }
 }
