--- a/linux/openrov.service
+++ b/linux/openrov.service
@@ -5,9 +5,9 @@
 #
 # Modified by OpenROV Inc. Dominik Fretz <dominik@openrov.com>
 #
-# ------------------------------------------------------------------------------ 
+# ------------------------------------------------------------------------------
 # SOME INFOS : fairly standard (debian) init script.
-#                 Note that node doesn't create a PID file (hence --make-pidfile) 
+#                 Note that node doesn't create a PID file (hence --make-pidfile)
 #                 has to be run in the background (hence --background)
 #                 and NOT as root (hence --chuid)
 #
@@ -32,12 +32,12 @@
 #     chmod 755,
 #
 #  4) if you wish the Daemon to be lauched at boot / stopped at shutdown :
-#     INSTALL : update-rc.d scriptname defaults 
+#     INSTALL : update-rc.d scriptname defaults
 #     (UNINSTALL : update-rc.d -f  scriptname remove)
 #
 #  5)  based on : Debian /etc/init.d/skeleton
 #      modified by : Peter Host (www.oghme.com)
-# ______________________________________________________________________________ 
+# ______________________________________________________________________________
 ### BEGIN INIT INFO
 # Provides:          node_debian_init
 # Required-Start:    $remote_fs $named $syslog
@@ -52,12 +52,12 @@
 #
 # Please remove the "Author" lines above and replace them
 # with your own name if you copy and modify this script.
-# ______________________________________________________________________________ 
+# ______________________________________________________________________________
 #
 # PATH should only include /usr/* if it runs after the mountnfs.sh script
 PATH=/sbin:/usr/sbin:/bin:/usr/bin:/usr/local/bin # modify if you need
 
-DAEMON_ARGS="/opt/openrov/src/app.js"               # path to your node.js server/app
+DAEMON_ARGS="/opt/openrov/cockpit/src/app.js"               # path to your node.js server/app
                                             # NB: don't use ~/ in path
 
 DESC="OpenROV NodeJS server"                  # whatever fancy description you like
@@ -78,7 +78,7 @@ DAEMON=/opt/node/bin/$NAME                 # this SHOULD POINT TO where your nod
 #                                                                              #
 #                   END </MODIFY TO REFLECT YOUR SETTINGS>                     #
 #                (Nothing else to modify from this point on...)                #
-# ------------------------------------------------------------------------------ 
+# ------------------------------------------------------------------------------
 
 
 
@@ -90,7 +90,7 @@ DAEMON=/opt/node/bin/$NAME                 # this SHOULD POINT TO where your nod
 THIS_ARG=$0
 INIT_SCRIPT_NAME=`basename $THIS_ARG`
 [ -h $THIS_ARG ] && INIT_SCRIPT_NAME=`basename $(readlink $THIS_ARG)` # in case of symlink
-INIT_SCRIPT_NAME_NOEXT=${INIT_SCRIPT_NAME%.*}                            
+INIT_SCRIPT_NAME_NOEXT=${INIT_SCRIPT_NAME%.*}
 PIDFILE="$LOCAL_VAR_RUN/$INIT_SCRIPT_NAME_NOEXT.pid"
 SCRIPTNAME=/etc/init.d/$INIT_SCRIPT_NAME
 
@@ -125,8 +125,8 @@ do_start()
 	if [ ! -f $ERRLOGFILE ];then touch $ERRLOG_FILE;fi
 	chown $NODEUSER $APPLOG_FILE
 	chown $NODEUSER $ERRLOG_FILE
-	arg1="1> $APPLOG_FILE"  
-	arg2="2> $ERRLOG_FILE" 
+	arg1="1> $APPLOG_FILE"
+	arg2="2> $ERRLOG_FILE"
 
 	# Return
 	#   0 if daemon has been started
@@ -136,7 +136,7 @@ do_start()
 		|| { [ "$VERBOSE" != no ] && log_daemon_msg  "  --->  Daemon already running $DESC" "$INIT_SCRIPT_NAME_NOEXT"; return 1; }
 	start-stop-daemon --start --chuid $NODEUSER --make-pidfile --pidfile $PIDFILE --background --exec /bin/bash -- \
 		-c "exec $DAEMON $DAEMON_ARGS $arg1 $arg2"  \
-		|| { [ "$VERBOSE" != no ] && log_daemon_msg " ---> could not be start $DESC" "$INIT_SCRIPT_NAME_NOEXT"; return 2; }	
+		|| { [ "$VERBOSE" != no ] && log_daemon_msg " ---> could not be start $DESC" "$INIT_SCRIPT_NAME_NOEXT"; return 2; }
 
 	# Add code here, if necessary, that waits for the process to be ready
 	# to handle requests from services started subsequently which depend
@@ -188,7 +188,7 @@ do_reload() {
 }
 
 #
-# Function that returns the daemon 
+# Function that returns the daemon
 #
 do_status() {
   #
@@ -199,15 +199,15 @@ do_status() {
   # 3 program is not running
   # 4 program or service status is unknown
   RUNNING=$(running)
-  
+
   # $PIDFILE corresponds to a live $NAME process
   ispidactive=$(pidof $NAME | grep `cat $PIDFILE 2>&1` >/dev/null 2>&1)
   ISPIDACTIVE=$?
 
   if [ -n "$RUNNING" ]; then
-    if [ $ISPIDACTIVE ]; then 
+    if [ $ISPIDACTIVE ]; then
       log_success_msg "$INIT_SCRIPT_NAME_NOEXT (launched by $USER) (--chuid $NODEUSER) is running"
-      exit 0      
+      exit 0
     fi
   else
     if [ -f $PIDFILE ]; then
@@ -218,7 +218,7 @@ do_status() {
       exit 3
     fi
   fi
-  
+
 }
 
 running() {
@@ -226,7 +226,7 @@ running() {
   if [ "$?" = 1 ]; then
     echo y
   fi
-  
+
 }
 
 
