--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "request" : "",
     "moment" : "",
     "mkdirp" : "",
+    "bower" : "",
     "forever-monitor" : "",
 	  "optimist" : "",
     "lazy" : ">= 1.0.11",
