--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lazy" : ">= 1.0.11",
     "sync" : "",
     "os-utils" : "",
+    "bower" : "",
     "jquery-file-upload-middleware" : ""
   },
   "bundleDependencies": [
