Fix bower script to include path to npm installed bower and pass the right parameters to bower to make it run on a build server under root

--- a/src/static/package.json
+++ b/src/static/package.json
@@ -4,6 +4,6 @@
     "bower": "^1.3.3"
   },
   "scripts": {
-    "bower": "bower install"
+    "bower": "./node_modules/bower/bin/bower --config.interactive=false --allow-root install"
   }
 }
