--- a/package.json
+++ b/package.json
@@ -7,22 +7,25 @@
     "type": "git",
     "url": "git://github.com/OpenROV/openrov-software.git"
   },
+  "scripts": {
+    "test": "./node_modules/grunt-cli/bin/grunt simplemocha"
+  },
   "dependencies": {
     "express": "= 3.4.8",
     "serialport": ">= 1.0.8",
     "ejs": "~0.8.3",
     "socket.io": "~1.1.0",
-    "nconf" : "",
-    "request" : "",
-    "moment" : "",
-    "mkdirp" : "",
-    "forever-monitor" : "",
-	  "optimist" : "",
-    "lazy" : ">= 1.0.11",
-    "sync" : "",
-    "os-utils" : "",
-    "jquery-file-upload-middleware" : "",
-    "bower" : ""
+    "nconf": "",
+    "request": "",
+    "moment": "",
+    "mkdirp": "",
+    "forever-monitor": "",
+    "optimist": "",
+    "lazy": ">= 1.0.11",
+    "sync": "",
+    "os-utils": "",
+    "jquery-file-upload-middleware": "",
+    "bower": ""
   },
   "bundleDependencies": [
     "express",
@@ -31,5 +34,16 @@
   ],
   "engines": {
     "node": ">= 0.10.15"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-simple-mocha": "^0.4.0",
+    "mocha": "^1.21.4",
+    "phantomjs": "^1.9.9",
+    "should": "^4.0.4",
+    "sinon": "^1.10.3",
+    "tap": "^0.4.12"
   }
 }
