Adding test fixture for showAlerts

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "should": "^4.0.4",
     "sinon": "^1.10.3",
     "spec": "^1.0.1",
+    "supertest": "^0.13.0",
     "tap": "^0.4.12"
   }
 }
