--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git://github.com/OpenROV/openrov-software.git"
   },
   "scripts": {
-    "test": "./node_modules/grunt-cli/bin/grunt simplemocha"
+    "test": "./node_modules/grunt-cli/bin/grunt test"
   },
   "dependencies": {
     "express": "= 3.4.8",
