--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-simple-mocha": "^0.4.0",
+    "grunt-mocha" : "^0.4.11",
     "mocha": "^1.21.4",
     "phantomjs": "^1.9.9",
     "should": "^4.0.4",
