--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-mocha": "^0.4.11",
     "grunt-simple-mocha": "^0.4.0",
     "mocha": "^1.21.4",
     "phantomjs": "^1.9.9",
