Initial test of new travis-ci build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,27 @@
-language: node_js
+language: python
+install: gem install fpm
 node_js:
   - 0.10
+
+env:
+  - ARCH=arm
+  global:
+  - VERSION_NUMBER="`cat package.json | grep version | grep -o '[0-9]\.[0-9]\.[0-9]\+'`"
+  - BUILD_NUMBER=$TRAVIS_BUILD_NUMBER
+  - secure: "P4i5RD2+chpGAPtkn1JYChOc+TVEHdHVVWA40uVAaHqRGm0I/kAvA2i4xXun0VAFFJJjQgC7BSdzQs9kP6IVu4x7VVXyOt3OYMql8ehsH6LU3Q476Rb+HIOzX30qYx+7F+cHUPFp/BTiyEJ+IOjU6sDTWLmSDpjUvVD2Tzg+PLI="
+  - REAL_GIT_BRANCH="`git for-each-ref --format='%(objectname) %(refname:short)' refs/heads
+    | grep $TRAVIS_COMMIT | awk '{print $2}'`"
+
+script:
+  - "bash -ex .travis-ci.sh"
+
+after_success:
+- echo version_number $VERSION_NUMBER
+- echo real_get_branch $REAL_GIT_BRANCH
+- rm -rf OpenROV/build-*
+- 'fpm -f -m info@openrov.com -s dir -t deb -a armhf -n openrov-cockpit -v
+  $VERSION_NUMBER-$REAL_GIT_BRANCH.$BUILD_NUMBER.`git rev-parse --short HEAD` --description ''OpenROV Cockpit'' .=/opt/openrov/cockpit '
+- mkdir build
+- DEBFILE="`ls *.deb`"
+- cp *.deb build/openrov-cockpit_latest-${REAL_GIT_BRANCH}_armhf.deb
+- mv *.deb build/
