--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
-language: node_js
-node_js:
-  - 0.10
+language: python
 install: gem install fpm
 
 env:
@@ -11,15 +9,11 @@ env:
   - REAL_GIT_BRANCH="`git for-each-ref --format='%(objectname) %(refname:short)' refs/heads
     | grep $TRAVIS_COMMIT | awk '{print $2}'`"
   - ARCH=arm
+addons:
+  hosts:
+    - registry.npmjs.org
 
 script:
-  - npm install --arch=armhf || onerror
-  - git clean -d -x -f -e node_modules
-  - cd src/static
-  - npm install --loglevel error
-  - npm run bower
-  - cd ../..
-
   - "bash -ex .travis-ci.sh"
 
 after_success:
