--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
 before_script:
 #  - sudo add-apt-repository ppa:linaro-maintainers/tools -y
   - sudo apt-get update -q
-  - sudo apt-get install qemu=2.0.0
+  - sudo apt-get install qemu<2.0.1
 
 script:
   - cat /etc/hosts
