--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ env:
   - ARCH=arm
 
 before_script:
-#  - sudo add-apt-repository ppa:linaro-maintainers/tools -y
+  - sudo add-apt-repository ppa:linaro-maintainers/tools -y
   - sudo apt-get update -q
-  - sudo apt-get install qemu=<2.0.1
+
 
 script:
   - cat /etc/hosts
