remote socket usage

--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
     "test": "./node_modules/grunt-cli/bin/grunt test"
   },
   "dependencies": {
-    "express": "= 3.4.8",
-    "serialport": ">= 1.0.8",
+    "bower": "",
     "ejs": "~0.8.3",
-    "socket.io": "~1.1.0",
-    "nconf": "",
-    "request": "",
-    "moment": "",
-    "mkdirp": "",
+    "eventemitter2": "^0.4.14",
+    "express": "= 3.4.8",
     "forever-monitor": "",
-    "optimist": "",
-    "lazy": ">= 1.0.11",
-    "sync": "",
-    "os-utils": "",
     "jquery-file-upload-middleware": "",
-    "bower": ""
+    "lazy": ">= 1.0.11",
+    "mkdirp": "",
+    "moment": "",
+    "nconf": "",
+    "optimist": "",
+    "os-utils": "",
+    "request": "",
+    "serialport": ">= 1.0.8",
+    "socket.io": "~1.1.0",
+    "sync": ""
   },
   "bundleDependencies": [
     "express",
@@ -40,7 +41,7 @@
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-simple-mocha": "^0.4.0",
-    "grunt-mocha" : "^0.4.11",
+    "grunt-mocha": "^0.4.11",
     "mocha": "^1.21.4",
     "phantomjs": "^1.9.9",
     "should": "^4.0.4",
