--- a/src/static/bower.json
+++ b/src/static/bower.json
@@ -4,6 +4,9 @@
     "fpsmeter": "~0.3.1",
     "knockout.validation": "~1.0.2",
     "polymer": "Polymer/polymer#~0.5.2",
-    "paper-slider": "Polymer/paper-slider#~0.5.4"
+    "paper-slider": "Polymer/paper-slider#~0.5.4",
+    "jquery": "1.11",
+    "jquery-ui": "1.11",
+    "knockoutjs": "3.2"
   }
 }
