--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "git://github.com/OpenROV/openrov-software.git"
   },
   "scripts": {
-    "test": "./node_modules/grunt-cli/bin/grunt test --debug"
+    "test": "./node_modules/grunt-cli/bin/grunt test --debug",
+    "install": "cd src/static; npm run bower"
   },
   "dependencies": {
     "bower": "",
