issue #339; Added CRC check for serial msgs

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "sync": "",
     "os-utils": "",
     "jquery-file-upload-middleware": "",
-    "bower": ""
+    "bower": "",
+    "crc" : ""
   },
   "bundleDependencies": [
     "express",
