--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "request": "",
     "serialport": ">= 1.0.8",
     "socket.io": "~1.1.0",
-    "sync": ""
+    "sync": "",
     "crc" : ""
   },
   "bundleDependencies": [
