Moved std-ui to mjpeg-video componenet

--- a/src/static/bower.json
+++ b/src/static/bower.json
@@ -2,6 +2,7 @@
   "name": "static openrov",
   "dependencies": {
     "fpsmeter": "~0.3.1",
+    "mjpeg-video-webcomponents": "~1.1.0",
     "knockout.validation": "~1.0.2",
     "polymer": "Polymer/polymer#~0.5.2",
     "paper-slider": "Polymer/paper-slider#~0.5.4",
