Encapsulated npm install and bower script commands in install.sh and bower-script.sh files, respectively, so as to make the 'npm install' command at the root level behave correctly on windows

--- a/src/static/package.json
+++ b/src/static/package.json
@@ -7,6 +7,6 @@
     "should": "^4.0.4"
   },
   "scripts": {
-    "bower": "../../node_modules/bower/bin/bower --config.interactive=false --allow-root install"
+    "bower": "bower-script.sh"
   }
 }
