--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "./node_modules/grunt-cli/bin/grunt test",
-    "install": "cd src/static; npm run bower"
+    "install": "install.sh"
   },
   "dependencies": {
     "bower": "",
