Upgraded to release version of Polymer

--- a/src/static/bower.json
+++ b/src/static/bower.json
@@ -4,7 +4,7 @@
     "fpsmeter": "~0.3.1",
     "mjpeg-video-webcomponents": "~1.1.0",
     "knockout.validation": "~1.0.2",
-    "polymer": "Polymer/polymer#~0.5.2",
+    "polymer": "Polymer/polymer#^1.0.0",
     "paper-slider": "Polymer/paper-slider#~0.5.4",
     "jquery": "1.11",
     "jquery-ui": "1.11",
