--- a/src/static/bower.json
+++ b/src/static/bower.json
@@ -5,7 +5,7 @@
     "mjpeg-video-webcomponents": "~1.1.0",
     "knockout.validation": "~1.0.2",
     "polymer": "Polymer/polymer#^1.0.0",
-    "paper-slider": "Polymer/paper-slider#~0.5.4",
+    "paper-slider": "PolymerElements/paper-slider#^1.0.4",
     "jquery": "1.11",
     "jquery-ui": "1.11",
     "knockoutjs": "3.2"
