Initial Serverside Settings managment

--- a/package.json
+++ b/package.json
@@ -13,23 +13,26 @@
   },
   "dependencies": {
     "bower": "",
+    "crc": "",
     "ejs": "~0.8.3",
     "eventemitter2": "^0.4.14",
     "express": "= 3.4.8",
     "forever-monitor": "",
     "jquery-file-upload-middleware": "",
+    "json-schema-defaults": "^0.1.1",
     "lazy": ">= 1.0.11",
     "mkdirp": "",
     "moment": "",
     "nconf": "",
+    "object-assign": "^4.0.1",
     "optimist": "",
     "os-utils": "",
+    "q": "^1.4.1",
     "request": "",
     "serialport": ">= 1.0.8",
     "socket.io": "~1.1.0",
     "sync": "",
-    "systemd": "git://github.com/plietar/node-systemd",    
-    "crc" : ""
+    "systemd": "git://github.com/plietar/node-systemd"
   },
   "bundleDependencies": [
     "express",
