--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-watch": "^0.6.1",    
     "grunt-mocha": "^0.4.11",
     "grunt-simple-mocha": "^0.4.0",
     "mocha": "^1.21.4",
