--- a/src/static/bower.json
+++ b/src/static/bower.json
@@ -8,6 +8,7 @@
     "knockout.validation": "~1.0.2",
     "knockoutjs": "3.2",
     "mjpeg-video-webcomponents": "~1.1.0",
+    "mousetrap": "~1.5.3",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.0.2",
     "paper-slider": "PolymerElements/paper-slider#^1.0.4",
     "polymer": "~1.1.5"
