--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "./node_modules/grunt-cli/bin/grunt test",
-    "install": "install.sh"
+    "install": "node install_lib/bower_install_all.js"
   },
   "dependencies": {
     "bower": "",
@@ -17,6 +17,7 @@
     "ejs": "~0.8.3",
     "eventemitter2": "^0.4.14",
     "express": "= 3.4.8",
+    "findit": "^2.0.0",
     "forever-monitor": "",
     "jquery-file-upload-middleware": "",
     "json-schema-defaults": "^0.1.1",
@@ -46,7 +47,7 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-watch": "^0.6.1",    
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha": "^0.4.11",
     "grunt-simple-mocha": "^0.4.0",
     "mocha": "^1.21.4",
