--- a/src/plugins/new-ui/public/bower.json
+++ b/src/plugins/new-ui/public/bower.json
@@ -17,7 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "core-elements": "Polymer/core-elements#~0.4.0",
-    "paper-elements": "Polymer/paper-elements#~0.4.0"
+    "bootstrap": "~3.3.5",
+    "jquery": "~2.1.4"
   }
 }
