--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "os-utils": "",
     "q": "^1.4.1",
     "request": "^2.65.0",
+    "rimraf": "^2.4.3",
     "serialport": "^2.0.2",
     "socket.io": "~1.1.0",
     "sync": "",
