Changed to patched branch for son-editor

--- a/src/system-plugins/settings-manager/public/bower.json
+++ b/src/system-plugins/settings-manager/public/bower.json
@@ -15,6 +15,6 @@
     "tests"
   ],
   "dependencies": {
-    "json-editor": "https://github.com/BrianAdams/json-editor.git#bug/522-theme-fail-on-docfragment"
+    "json-editor": "https://github.com/BrianAdams/json-editor.git#patched"
   }
 }
