--- a/src/plugins/telemetry/public/bower.json
+++ b/src/plugins/telemetry/public/bower.json
@@ -15,5 +15,9 @@
   ],
   "dependencies": {
     "grapp-graph-epoch": "~0.1.2"
+  },
+  "resolutions": {
+    "polymer": "^1.0.0",
+    "webcomponentsjs": "^0.7.20"
   }
 }
