--- a/src/plugins/classic-ui/public/bower.json
+++ b/src/plugins/classic-ui/public/bower.json
@@ -20,5 +20,9 @@
   "dependencies": {
     "bootstrap": "2.3.2",
     "jquery": "~2.1.4"
+  },
+  "resolutions": {
+    "jquery": "~2.1.4",
+    "webcomponentsjs": "^0.6.0"
   }
 }
