--- a/src/plugins/headsup-menu/public/bower.json
+++ b/src/plugins/headsup-menu/public/bower.json
@@ -13,6 +13,8 @@
     "test",
     "tests"
   ],
-  "dependencies": {
+  "dependencies": {},
+  "resolutions": {
+    "webcomponentsjs": "^0.6.0"
   }
 }
