--- a/src/plugins/new-ui/public/bower.json
+++ b/src/plugins/new-ui/public/bower.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "bootstrap": "~3.3.5",
     "jquery": "~2.1.4"
+  },
+  "resolutions": {
+    "webcomponentsjs": "^0.6.0"
   }
 }
