--- a/src/plugins/video/public/bower.json
+++ b/src/plugins/video/public/bower.json
@@ -13,7 +13,11 @@
     "test",
     "tests"
   ],
-  "dependencies" : {
+  "dependencies": {
     "mjpeg-video-webcomponents": "~2.0.1"
+  },
+  "resolutions": {
+    "webcomponentsjs": "^0.7.20",
+    "polymer": "~1.2.0"
   }
 }
