--- a/src/static/bower.json
+++ b/src/static/bower.json
@@ -13,7 +13,7 @@
     "polymer": "~1.2.0"
   },
   "resolutions": {
-    "polymer": "~1.2.1",
-    "webcomponentsjs": "0.7.14"
+    "polymer": "^1.2.1",
+    "webcomponentsjs": "0.7.20"
   }
 }
