--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "grunt-simple-mocha": "^0.4.1",
     "mocha": "^2.4.5",
     "phantomjs": "^2.1.3",
+    "request": "^2.69.0",
     "should": "^8.2.1",
     "sinon": "^1.17.3",
     "spec": "^1.0.1",
