Upgrade for Express 4

--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
     "install": "node install_lib/bower_install_all.js"
   },
   "dependencies": {
+    "body-parser": "^1.14.2",
     "bower": "^1.7.7",
     "crc": "",
     "ejs": "~2.4.1",
+    "errorhandler": "^1.4.3",
     "eventemitter2": "^0.4.14",
     "express": "=4.13.4",
+    "express-session": "^1.13.0",
     "findit": "^2.0.0",
     "forever-monitor": "",
     "jquery-file-upload-middleware": "",
     "json-schema-defaults": "^0.1.1",
     "lazy": ">= 1.0.11",
+    "method-override": "^2.3.5",
     "mkdirp": "",
     "moment": "",
+    "morgan": "^1.6.1",
+    "multer": "^1.1.0",
     "nconf": "",
     "object-assign": "^4.0.1",
     "optimist": "",
@@ -32,6 +38,8 @@
     "request": "^2.69.0",
     "rimraf": "^2.5.1",
     "serialport": "^2.0.6",
+    "serve-favicon": "^2.3.0",
+    "serve-index": "^1.7.3",
     "socket.io": "~1.4.5",
     "sync": "",
     "systemd": "git://github.com/plietar/node-systemd.git"
