tweaks to support geomux plugin
	modified:   package.json
	modified:   src/cockpit.js
	modified:   src/lib/Hardware.js
	modified:   src/lib/OpenROVController.js
	modified:   src/plugins/new-ui/index.ejs
	modified:   src/plugins/video/index.js
	modified:   src/plugins/video/public/bower.json
	modified:   src/plugins/video/public/js/video.js
	modified:   src/plugins/video/public/webcomponents/orov-video.html
	modified:   src/system-plugins/ui-manager/index.js

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery-file-upload-middleware": "",
     "json-schema-defaults": "^0.1.1",
     "lazy": ">= 1.0.11",
+    "mdns": "^2.3.0",
     "method-override": "^2.3.5",
     "mkdirp": "",
     "moment": "",
