--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "os-utils": "",
     "q": "^1.4.1",
     "request": "^2.69.0",
+    "respawn": "^2.3.0",
     "rimraf": "^2.5.1",
     "serialport": "^2.0.6",
     "serve-favicon": "^2.3.0",
