video updated to support simulated h.264

--- a/src/plugins/geomuxp/package.json
+++ b/src/plugins/geomuxp/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Brian Adams <brian@babastik.com>",
   "license": "MIT",
+  "dependencies": {
+    "geo-video-simulator": "https://github.com/OpenROV-Dev/geo-video-simulator.git"
+  },
   "optionalDependencies": {
     "geo-video-server": "https://github.com/OpenROV-Dev/geo-video-server.git"
   }
