fixed bower.json name to match 1.7.8 bower validation

--- a/src/static/bower.json
+++ b/src/static/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "static openrov",
+  "name": "static_openrov",
   "dependencies": {
     "fpsmeter": "~0.3.1",
     "i18next": "~1.11.0",
