--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "body-parser": "^1.14.2",
-    "bower": "^1.7.7",
+    "bower": "=1.7.7",
     "crc": "",
     "ejs": "~2.4.1",
     "errorhandler": "^1.4.3",
