--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "grunt-mocha": "^0.4.15",
     "grunt-simple-mocha": "^0.4.1",
     "mocha": "^2.4.5",
+    "npm-check-updates": "^2.6.3",
     "phantomjs": "^2.1.3",
     "request": "^2.69.0",
     "should": "^8.2.1",
