--- a/src/system-plugins/settings-manager/public/bower.json
+++ b/src/system-plugins/settings-manager/public/bower.json
@@ -15,7 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "json-editor": "https://github.com/BrianAdams/json-editor.git#patched"
+    "json-editor": "https://github.com/BrianAdams/json-editor.git#patched",
+    "paper-toast": "PolymerElements/paper-toast#^1.2.2"
   },
   "resolutions": {
     "webcomponentsjs": "^0.6.0"
