Rest of the mobile ui changes

--- a/src/plugins/translations.en-US/orov-appletswitcher.json
+++ b/src/plugins/translations.en-US/orov-appletswitcher.json
@@ -2,5 +2,11 @@
   "addons": "addons",
   "settings": "settings",
   "data": "data",
-  "cockpit": "cockpit"
+  "cockpit": "cockpit",
+  "head": "head",
+  "map": "map",
+  "network": "network",
+  "social": "social",
+  "update": "update",
+  "vr": "vr"
 }
