More general cleanup

--- a/src/plugins/translations.en-US/orov-appletswitcher.json
+++ b/src/plugins/translations.en-US/orov-appletswitcher.json
@@ -8,5 +8,6 @@
   "network": "network",
   "social": "social",
   "update": "update",
-  "vr": "vr"
+  "vr": "vr",
+  "diagnostics": "diagnostics"
 }
