Refactor Themes for applets and servlets (#61)
* Introducing Applets, micro applications inside the SPA.  There is a new message type from the ui-manager that lists all of the applets available to a theme.  A theme can choose to override existing applets by creating an .ejs file of the same name.

* Themes support special header, head, and footer .ejs files.  Items in these templates will be injected in to each applet that is displayed which allows a theme author to make general style changes that will affect pages that they don't want to completely redo in their own theme.

* Applet changes are reflected in the browser URL.  The build in routing keys off of applications after the hash tag.

* Cleaned up the setting applet, auto saves on any change and basic css support added.

* Existing themes have been upgraded with headers that place nav elements on every applet.

* fixed timing bug around registering event emitter changes

* fine tuning of new-ui css

* Fixed battery configuration bug

--- a/src/static/bower.json
+++ b/src/static/bower.json
@@ -3,17 +3,14 @@
   "dependencies": {
     "fpsmeter": "~0.3.1",
     "i18next": "~1.11.0",
-    "iron-ajax": "PolymerElements/iron-ajax#~1.0.4",
     "jquery": "2.1",
     "jquery-ui": "1.11",
     "mousetrap": "~1.5.3",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.1.3",
-    "paper-slider": "PolymerElements/paper-slider#^1.0.4",
-    "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
-    "polymer": "~1.2.0"
+    "polymer": "^1.4.0",
+    "webcomponentsjs": "^0.7.22"
   },
   "resolutions": {
-    "polymer": "^1.2.1",
-    "webcomponentsjs": "0.7.22"
+    "webcomponentsjs": "0.7.22",
+    "polymer": "^1.4.0"
   }
 }
