Video working over https

--- a/src/plugins/translations.en-US/orov-appletswitcher.json
+++ b/src/plugins/translations.en-US/orov-appletswitcher.json
@@ -9,5 +9,6 @@
   "social": "social",
   "update": "update",
   "vr": "vr",
-  "diagnostics": "diagnostics"
+  "diagnostics": "diagnostics",
+  "diveprofile": "diveprofile"
 }
