--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.14.2",
     "bower": "=1.7.7",
     "crc": "",
+    "debug": "^2.2.0",
     "ejs": "~2.4.1",
     "errorhandler": "^1.4.3",
     "eventemitter2": "^0.4.14",
