--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ bower_components
 **/bower_components/*
 
 src/plugins/telemetry/public/bower_components
+
+# Visual Studio Code generated files #
+######################################
+.vscode/.browse*
