--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,7 @@
 			"env": {
 				"NODE_ENV": "development",
 				"USE_MOCK": "true",
+				"HARDWARE_MOCK": "true",
 				"GEO_MOCK": "true",
 				"configfile": "/tmp/rovconfig.json",
 				"plugins__ui-manager__selectedUI": "new-ui",
