Added DEBUG env variable to vscode to turn on messages from debug package

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,7 @@
 				"USE_MOCK": "true",
 				"HARDWARE_MOCK": "true",
 				"GEO_MOCK": "true",
+				"DEBUG": "*",
 				"configfile": "/tmp/rovconfig.json",
 				"plugins__ui-manager__selectedUI": "new-ui",
 				"pluginsDownloadDirectory": "/tmp/plugins"
