Turned off global debug scope

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
 				"USE_MOCK": "true",
 				"HARDWARE_MOCK": "true",
 				"GEO_MOCK": "true",
-				"DEBUG": "*",
+				"DEBUG": "hardware, physical-interface",
 				"configfile": "/tmp/rovconfig.json",
 				"plugins__ui-manager__selectedUI": "new-ui",
 				"pluginsDownloadDirectory": "/tmp/plugins"
