Added binary-parser dependency for platform-manager

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "install": "node install_lib/bower_install_all.js && node install_lib/npm_install_all.js"
   },
   "dependencies": {
+    "binary-parser": "1.1.5",
     "body-parser": "^1.14.2",
     "bower": "=1.7.7",
     "crc": "",
