--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,7 @@
 				"NODE_ENV": "development",
 				"USE_MOCK": "true",
 				"HARDWARE_MOCK": "true",
+				"CPU_MOCK": "123MOCK",
 				"GEO_MOCK": "true",
 				"DEBUG": "hardware, physical-interface",
 				"configfile": "/tmp/rovconfig.json",
