Stats display for Internet Streaming

--- a/src/static/bower.json
+++ b/src/static/bower.json
@@ -10,7 +10,7 @@
     "webcomponentsjs": "^0.7.22"
   },
   "resolutions": {
-    "webcomponentsjs": "^0.7.20",
+    "webcomponentsjs": "0.7.22",
     "polymer": "^1.4.0"
   }
 }
