--- a/src/plugins/internet-stream/public/bower.json
+++ b/src/plugins/internet-stream/public/bower.json
@@ -15,6 +15,10 @@
     "tests"
   ],
   "dependencies": {
-    "visionmedia-debug": "visionmedia/debug#~2.2.0"
+    "visionmedia-debug": "visionmedia/debug#~2.2.0",
+    "paper-card": "PolymerElements/paper-card#^1.1.1"
+  },
+  "resolutions": {
+    "webcomponentsjs": "^0.6.0"
   }
 }
